@@ -120,7 +120,27 @@ class NSCAServerTest(BasicTest):
 	def teardown(self):
 		None
 		
-	def submit_payload(self, encryption, source, status, msg, perf):
+	def wait_and_validate(self, uuid, result, msg, perf, tag):
+		found = False
+		for i in range(0,10):
+			if self.has_response(uuid):
+				rmsg = self.get_response(uuid)
+				result.add_message(rmsg.got_response, 'Testing to recieve message using %s'%tag)
+				result.add_message(rmsg.got_simple_response, 'Testing to recieve simple message using %s'%tag)
+				#result.assert_equals(rmsg.last_source, source, 'Verify that source is sent through')
+				result.assert_equals(rmsg.command, uuid, 'Verify that command is sent through using %s'%tag)
+				result.assert_contains(rmsg.message, msg, 'Verify that message is sent through using %s'%tag)
+				result.assert_equals(rmsg.perfdata, perf, 'Verify that performance data is sent through using %s'%tag)
+				self.del_response(uuid)
+				return True
+			else:
+				log('Waiting for %s (%d/10)'%(uuid, i+1))
+				sleep(1)
+		result.add_message(False, 'Failed to recieve message %s using %s'%(uuid, tag))
+		return False
+	
+		
+	def submit_payload(self, encryption, source, status, msg, perf, tag, retry=True):
 		message = plugin_pb2.SubmitRequestMessage()
 		
 		message.header.version = plugin_pb2.Common.VERSION_1
@@ -143,40 +163,41 @@ class NSCAServerTest(BasicTest):
 		payload.message = '%s - %s'%(uid, msg)
 		payload.source = source
 		(result_code, err) = core.submit('nsca_test_outbox', message.SerializeToString())
+
+		result = TestResult()
+		result.add_message(len(err) == 0, 'Testing to send message using %s/sbp'%tag, err)
+		found = self.wait_and_validate(uid, result, msg, perf, '%s/spb'%tag)
+		if retry and not found:
+			return self.submit_payload(encryption, source, status, msg, perf, tag, False)
+		return result
+		
+	def submit_via_exec(self, encryption, source, status, msg, perf, tag, retry=True):
+		uid = str(uuid.uuid4())
+	
+		args = [
+			#'--exec', 'submit', 
+			'--alias', uid, 
+			'--result', '%d'%status, 
+			'--message', '%s - %s'%(uid, msg), 
+			'--encryption', encryption,
+			'--password', 'pwd-%s'%encryption,
+			'--host', '127.0.0.1:15667'
+			]
+		(result_code, result_message) = core.simple_exec('any', 'nsca_submit', args)
 		result = TestResult()
 		
-		found = False
-		for i in range(0,10):
-			if self.has_response(uid):
-				rmsg = self.get_response(uid)
-				result.add_message(rmsg.got_response, 'Testing to recieve message using %s'%encryption)
-				result.add_message(rmsg.got_simple_response, 'Testing to recieve simple message using %s'%encryption)
-				result.add_message(len(err) == 0, 'Testing to send message using %s'%encryption, err)
-				#result.assert_equals(rmsg.last_source, source, 'Verify that source is sent through')
-				result.assert_equals(rmsg.command, uid, 'Verify that command is sent through')
-				result.assert_contains(rmsg.message, msg, 'Verify that message is sent through')
-				result.assert_equals(rmsg.perfdata, perf, 'Verify that performance data is sent through')
-				self.del_response(uid)
-				found = True
-				break
-			else:
-				log('Waiting for %s'%uid)
-				sleep(1)
-		if not found:
-			return None
+		result.add_message(result_code == 0, 'Testing to send message using %s/exec:1'%tag)
+		result.add_message(len(result_message) == 1, 'Testing to send message using %s/exec:2'%tag, len(result_message))
+		result.add_message(len(result_message[0]) == 0, 'Testing to send message using %s/exec:3'%tag, result_message[0])
+		found = self.wait_and_validate(uid, result, msg, perf, '%s/exec'%tag)
+		if retry and not found:
+			return self.submit_via_exec(encryption, source, status, msg, perf, tag, False)
 		return result
 
 	def test_one_crypto_full(self, encryption, state, key):
-		r1 = self.submit_payload(encryption, '%ssrc%s'%(key, key), state, '%smsg%s'%(key, key), '')
-		if r1:
-			return r1
 		result = TestResult()
-		result.add_message(True, '*FAILED* to send message with %s (retrying)'%encryption)
-		r2 = self.submit_payload(encryption, '%ssrc%s'%(key, key), state, '%smsg%s'%(key, key), '')
-		if r2:
-			result.add(r2)
-			return result
-		result.add_message(False, 'Failed to send message with uuid: %s'%encryption)
+		result.add(self.submit_payload(encryption, '%ssrc%s'%(key, key), state, '%smsg%s'%(key, key), '', '%s/%s'%(state, encryption)))
+		result.add(self.submit_via_exec(encryption, '%ssrc%s'%(key, key), state, '%smsg%s'%(key, key), '', '%s/%s'%(state, encryption)))
 		return result
 
 	def test_one_crypto(self, crypto):
@@ -185,6 +206,7 @@ class NSCAServerTest(BasicTest):
 		conf.set_string('/settings/NSCA/test_nsca_server', 'password', 'pwd-%s'%crypto)
 		core.reload('test_nsca_server')
 		result = TestResult()
+		result.add_message(isOpen('localhost', 15667), 'Checking that port is open')
 		result.add(self.test_one_crypto_full(crypto, status.UNKNOWN, 'unknown'))
 		result.add(self.test_one_crypto_full(crypto, status.OK, 'ok'))
 		result.add(self.test_one_crypto_full(crypto, status.WARNING, 'warn'))
@@ -193,7 +215,6 @@ class NSCAServerTest(BasicTest):
 
 	def run_test(self):
 		result = TestResult()
-		result.add_message(isOpen('localhost', 15667), 'Checking that port is open')
 		# Currently broken: "xor"
 		cryptos = ["des", "3des", "cast128", "xtea", "blowfish", "twofish", "rc2", "aes", "serpent", "gost", "none", "3way"]
 		for c in cryptos:
